fixed layout spacing issue in about page

--- a/src/App.css
+++ b/src/App.css
@@ -278,18 +278,18 @@ font-size: 14px;
   width: 75%;
   height: 80%;
   margin: 'auto';
-  padding-top: '1em';
+  padding: '1em';
   font-family: 'Vollkorn', sans-serif;
   background-color: white;
-  border: 2px solid #4CA1AF;
+  border: 4px solid #4CA1AF;
   margin-left: 12.5%;
   margin-right: 12.5%;
   color: '##35393a';
 }
 .profile-img{
-  height: 600px;
+  height: 610px;
   justify-content: center;
-  padding-bottom: 20px;
+  /* padding-bottom: 20px; */
   border: 2px solid #4CA1AF;
 }
 
@@ -324,21 +324,23 @@ font-size: 14px;
   font-size: 16px;
  }
 .about-me-photos{
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
+  padding: '1em';
   justify-content: center;
 }
+
  .about-me-span{
   width: 100%;
-  background-color:#ccffff;
-  margin-left: 10%;
-  margin-right: 10%;
+  background-color:#e4e7e7;
+  margin-left: 5%;
+  margin-right: 5%;
   justify-content: center;
  }
 
  .row {
   display: flex;
+  text-align: center;
+  width: 96%;
+  
 }
 
 .column {
